Fixed scrollbars on sheets and padding issues

--- a/src/App/Views/Sheets/MainSheet/MainSheetFatePoints.scss
+++ b/src/App/Views/Sheets/MainSheet/MainSheetFatePoints.scss
@@ -1,9 +1,11 @@
-#main-sheet .fate-points {
+#main-sheet > .lower > .calculated > div.fate-points {
 	display: flex;
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	position: relative;
-	margin: 10mm 0 0;
+	flex: 0 0 auto;
+	margin: auto 0 0;
+	height: auto;
 
 	h3 {
 		width: 100%;
